--- a/8-03.md
+++ b/8-03.md
@@ -1,21 +1,4 @@
-# Домашнее задание к занятию «GitLab»
-
-### Инструкция по выполнению домашнего задания
-
-   1. Сделайте `fork` [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в GitHub и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw.
-   2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-   3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-      - впишите сверху название занятия, ваши фамилию и имя;
-      - в каждом задании добавьте решение в требуемом виде — текст, код, скриншоты, ссылка.
-      - для корректного добавления скриншотов используйте [инструкцию «Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-      - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции  по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-   4. После завершения работы над домашним заданием сделайте коммит `git commit -m "comment"` и отправьте его на GitHub `git push origin`.
-   5. Для проверки домашнего задания в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем GitHub.
-   6. Любые вопросы по выполнению заданий задавайте в чате учебной группы или в разделе «Вопросы по заданию» в личном кабинете.
-   
-Желаем успехов в выполнении домашнего задания!
-
----
+# Домашнее задание к занятию «GitLab» Хасаншин М.Р.
 
 ### Задание 1
 
@@ -28,6 +11,11 @@
 В качестве ответа в репозиторий шаблона с решением добавьте скриншоты с настройками раннера в проекте.
 
 ---
+
+### Решение 1
+
+![123123](https://github.com/user-attachments/assets/31ba9359-f151-4508-9102-3b79eb23decf)
+![232323](https://github.com/user-attachments/assets/12c4be97-5134-4ada-a069-e526641a2445)
 
 ### Задание 2
 
@@ -43,17 +31,13 @@
  
  
 ---
-## Дополнительные задания* (со звёздочкой)
 
-Их выполнение необязательное и не влияет на получение зачёта по домашнему заданию. Можете их решить, если хотите лучше разобраться в материале.
+### Решение 2
 
----
+![34343434](https://github.com/user-attachments/assets/f6d09625-b5bf-4619-8a0b-901eda65c89e)
 
-### Задание 3*
 
-Измените CI так, чтобы:
 
- - этап сборки запускался сразу, не дожидаясь результатов тестов;
- - тесты запускались только при изменении файлов с расширением *.go.
 
-В качестве ответа добавьте в шаблон с решением файл gitlab-ci.yml своего проекта или вставьте код в соответсвующее поле в шаблоне.
+
+
